# CalQ

./: .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  vcpkg.json
.githooks/: install.ps1  pre-push
cmake/: FindGMP.cmake  FindMPFR.cmake  clang-tidy.cmake
math/: mathinterpreter.cpp  mathinterpreter.h  mathtest.cpp
scripts/: build-mingw.ps1  build.bash  build.ps1  build_all.ps1
src/: main.cpp  mainwindow.cpp  mainwindow.h
src/app/: calqgraph.cpp  calqgraph.h  graph.qml  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/interpreter/: expression.cpp  expression.h  function_database.cpp  function_database.h  interpreter.cpp  interpreter.h  lexer.cpp  lexer.h  mathfunction.cpp  mathfunction.h  mathinterpreter.cpp  mathstatement.cpp  mathstatement.h  parser.cpp  parser.h
src/math/: functions.cpp  lexer.cpp  lexer.h  mathfunction.cpp  mathfunction.h  mathinterpreter.cpp  mathinterpreter.h  mathstatement.cpp  mathstatement.h  mathstatementparser.cpp  mathstatementparser.h  mathstringify.cpp  mathstringify.h  mathtest.cpp  number.cpp  number.h  numberimpl.h  parser.cpp  parser.h
src/math/backend/: functions.cpp  functions.h  number.cpp  number.h  numberimpl.h
src/test/: benchmark.cpp  mathtest.cpp  test.cpp
